   c introduced by the class.
  (Florian Angeletti, report by Eduardo Rafael, review by Gabriel Scherer)

- #6985, #10385: remove all ghost row types from included modules
  (Florian Angeletti, review by Gabriel Scherer)

- #7453, #9828, #10416: fix #show for recursive types and modules
  (Florian Angeletti, review by Gabriel Scherer)

* #8857, #10220: Don't clobber GetLastError() in caml_leave_blocking_section
  when the systhreads library is loaded.
  (David Allsopp, report by Anton Bachin, review by Xavier Leroy)

- #8575, #10362: Surprising interaction between polymorphic variants and
  constructor disambiguation.
  (Jacques Garrigue, report and review by Thomas Refis)

- #8917, #8929, #9889, #10219: fix printing of nested recursive definitions
  in presence of a name collision.
  (Florian Angeletti, report by Thomas Refis, review by Gabriel Scherer)

- #10005: Try expanding aliases in Ctype.nondep_type_rec
  (Stephen Dolan, review by Gabriel Scherer, Leo White and Xavier Leroy)

- #10072, #10085: Check that sizes and offsets in stack frame descriptors
  do not overflow the 16-bit fields where they are stored.
  (Xavier Leroy, report by Github user pveber, review by Gabriel Scherer)

- #10087, #10138: In the toplevel REPL, don't use the cache
  of included directories, so that files created or deleted while
  the REPL is running are correctly handled.
  (Xavier Leroy, report by Github user quakerquickoats, review by
   Jeremie Dimino)

- #10294, #10295: fix an assert-failure in pattern-matching compilation
  (Gabriel Scherer, review by Thomas Refis and Luc Maranget,
   report by Nicolás Ojeda Bär)

- #10147, #10148: Fix building runtime with GCC on macOS.
  (David Allsopp, report by John Skaller)

- #10166: Fix illegal permutation error reporting in module aliases.
  (Matthew Ryan, review by Florian Angeletti)

- #10189, #10190, #10347: Universal variables leaking through GADT equations
  (Jacques Garrigue, report and review by Leo White)
