@@ -438,6 +438,10 @@ Working version
 - #7453, #9828, #10416: fix #show for recursive types and modules
   (Florian Angeletti, review by Gabriel Scherer)
 
+* #7469, #10408: Sys.time now returns processor time on Windows (previously
+  returned wall-clock time)
+  (David Allsopp, review by Nicolás Ojeda Bär)
+
 * #8857, #10220: Don't clobber GetLastError() in caml_leave_blocking_section
   when the systhreads library is loaded.
   (David Allsopp, report by Anton Bachin, review by Xavier Leroy)
